# source-sink

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/zxj/android/source/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/cutils/: properties.h
app/src/main/java/com/zxj/android/source/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/zxj/android/source/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
